--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Step 2 - Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 1.8
 
       - name: Step 3 - Have GitHub Actions Build Maven Project
